--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -55,7 +55,7 @@ button {
     height: 40%;
     width: 8%;
     border-radius: 20px;
-    background-color: #FFbf59;
+    background-color: #FFBF59;
     border : none;
     font-family: "Poppins", sans-serif;
 }
