--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+div {
+  background-color: #202020;
+}
+
+h1 {
+  font-family: "Poppins", sans-serif;
+}
