--- a/client/src/pages/Learn.css
+++ b/client/src/pages/Learn.css
@@ -1,6 +1,6 @@
 .maincontainer{
     width: 100%;
-    color:#C10206;
+    color:white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,6 +8,7 @@
 }
 
 .Lh1{
+    margin-top: 30px;
     margin-bottom: 50px;
 }
 
